# OpenGL_Study

./: .gitignore  3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  LICENSE  Makefile  conanfile.py
.github/workflows/: conan.yml
include/: shader.h
include/glad/: glad.h
src/: main.cpp  shader.cpp
src/glad/: glad.c
tests/: opengl_fixture.hpp  test_shader_compilation.cpp
